--- a/ioteca_web/ioteca_web_apps/financiero/views/persona/index.html
+++ b/ioteca_web/ioteca_web_apps/financiero/views/persona/index.html
@@ -1,1 +1,70 @@
-<h1>estamos en index persona</h1>
+<div ng-cloak>
+    <md-content class="md-padding" layout-xs="column">
+        <div flex-xs flex-gt-xs>
+            <md-card ng-controller="PersonaCtrl">
+                <md-card-title>
+                    <md-card-title-text>
+                        <span class="md-headline">Personas</span>
+                        <!-- <span class="md-subhead">CRUD areasubarea</span> -->
+                    </md-card-title-text>
+                </md-card-title>
+                <md-divider></md-divider>
+                <md-card-actions layout="row" layout-align="start center" layout-xs="column">
+                    <md-card-icon-actions>
+                        <md-button class="md-fab md-mini md-primary" aria-label="Add" ng-click="new($event)">
+                            <md-tooltip md-autohide>Añadir</md-tooltip>
+                            <ng-md-icon icon="add" aria-label="Add"></ng-md-icon>
+                        </md-button>
+                    </md-card-icon-actions>
+
+                    <span flex></span>
+                    <md-card-icon-actions layout-align="end center">
+                        <input placeholder="buscar" ng-model="query" ng-keyup="buscar()">
+                        <md-button class="md-icon-button" aria-label="Share">
+                            <ng-md-icon icon="more_vert" aria-label="title"></ng-md-icon>
+                        </md-button>
+                    </md-card-icon-actions>
+                </md-card-actions>
+                <md-divider></md-divider>
+                <md-table-container>
+                    <table class="table-material" md-table data-md-row-select="" mi-table>
+                        <thead md-head>
+                            <tr md-row>
+                                <th md-column>#</th>
+                                <th md-column md:order:by="name">Nombres</th>
+                                <th md-column>DNI</th>
+                                <th md-column>Celular</th>
+                                <th md-column>Est Civil</th>
+                                <th md-column>Sexo</th>
+                                <th md-column colspan='2' align='center'>Opciones</th>
+                            </tr>
+                        </thead>
+                        <tbody md-body>
+                            <tr md-row ng-repeat="d in lista">
+                                <td md-cell>{{$index +1 }}</td>
+                                <td md-cell> {{ d.nombres }} {{d.ap_paterno}} {{d.ap_materno}}</td>
+                                <td md-cell> {{ d.dni }}</td>
+                                <td md-cell> {{ d.celular}}</td>
+                                <td md-cell> {{ d.estado_civil}}</td>
+                                <td md-cell> {{ d.sexo}}</td>
+                                <td md-cell>
+                                    <md-button class="md-icon-button" aria-label="Edit" ng-click="sel(d)">
+                                        <md-tooltip md-autohide>Editar {{ d.id }}</md-tooltip>
+                                        <ng-md-icon icon="edit" aria-label="Edit"></ng-md-icon>
+                                    </md-button>
+                                </td>
+                                <td md-cell>
+                                    <md-button class="md-icon-button" aria-label="delete" ng-click="delete(d)">
+                                        <md-tooltip md-autohide>Eliminar {{ d.ponderado }}</md-tooltip>
+                                        <ng-md-icon icon="delete" aria-label="delete"></ng-md-icon>
+                                    </md-button>
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </md-table-container>          
+
+            </md-card>
+        </div>
+    </md-content>
+</div>
